cluster/core/argocd-proxy/envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: argocd
spec:
  gatewayClassName: envoy
  infrastructure:
    labels:
      app: envoy-gateway
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: argocd.home.vabalai.eu
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: argocd-tls
            namespace: argocd
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: gateway-api
    group: gateway.networking.k8s.io
    sectionName: https
    kind: Gateway
  hostnames:
  - argocd.home.vabalai.eu
  rules:
  - backendRefs:
    - name: argocd-server
      group: ''
      kind: Service
      port: 443
      weight: 1
    matches:	
        - path:	
            type: PathPrefix	
            value: /
